// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionButton rendering matches the expected snapshot when enabled 1`] = `
.c0 {
  color: #dddddd;
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 30px 0 20px 25px;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c0:hover {
  background-color: var(--accent-background-color);
}

@media (min-width:800px) {
  .c0 {
    font-size: 1.5rem;
  }
}

@media (min-width:2000px) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (min-width:3500px) {
  .c0 {
    font-size: 4.5rem;
  }
}

<button
  className="c0"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`OptionButton rendering matches the expected snapshot when not enabled 1`] = `
.c0 {
  color: #dddddd;
  background-color: var(--primary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 30px 0 20px 25px;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

@media (min-width:800px) {
  .c0 {
    font-size: 1.5rem;
  }
}

@media (min-width:2000px) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (min-width:3500px) {
  .c0 {
    font-size: 4.5rem;
  }
}

<button
  className="c0"
  onClick={[Function]}
>
  TEST
</button>
`;
